Import Debian changes 3.5b2-24slink1
canna (3.5b2-24slink1) stable; urgency=high

  * for stable release security fix based on canna_3.5b2-25
  * readopt to fsstnd for slink
  * [SECURITY FIX] buffer overflow. If send IR_INIT command to cannaserver
    with very logn username and/or groupname, remote user can get root
    facility. 
  * add /etc/hosts.canna file as conffile for security reason. Default
    setting is `clients can connect cannaserver only from localhost.'

canna (3.5b2-23) unstable; urgency=low

  * move /usr/lib/lib*.so from canna.deb to libcanna1g-dev.deb
  * add Confilics: canna (<= 3.5b2-22) for libcanna1g and libcanna1g-dev.
    (Because some files from canna to libcanna1g and libcanna1g-dev)

canna (3.5b2-22) unstable; urgency=low

  * /var/lib/canna/dic/*.cbp moved from canna to libcanna1g package,
    closes: Bug#32096.
  * adopt FHS.

canna (3.5b2-21) unstable; urgency=high

  * Oops 3.5b2-20 has not been builded compleatly, so fixed (Bug#38504)
  * remove -k option flag for make command from $(TOP)/Imakefile

canna (3.5b2-20) unstable; urgency=low

  * New Maintainer.
  * Apply Unofficial patche 1 and 2
   (downloaded from http://www.jaist.ac.jp/~fujieda/canna/)
  * /etc/service already has canna service, so does not add it in postinst
   (Bug#37835)
  * purge /var/log/canna and /var/lib/canna/dic/{user,group}
   (Bug#36353)

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: canna
 Section: utils
 Priority: optional
-Maintainer: Yoshiaki Yanagihara <yochi@debian.or.jp>
+Maintainer: ISHIKAWA Mutsumi <ishikawa@linux.or.jp>
 Standards-Version: 2.4.1.3
 
 Package: canna
@@ -34,6 +34,7 @@ Package: libcanna1g
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}
+Conflicts: canna (<< 3.5b2-23)
 Description: Canna Runtime Library (Libc6).
  Canna is a Japanese input system available in Free Software.
  This package includes canna shared libraries.
@@ -43,7 +44,7 @@ Section: devel
 Priority: extra
 Architecture: any
 Depends: libcanna1g
-Conflicts: canna-dev, libcanna1-dev
+Conflicts: canna-dev, libcanna1-dev, canna (<< 3.5b2-23)
 Replaces: canna-dev
 Description: Canna Static Library and Headers (Libc6).
  Canna is a Japanese input system available in Free Software.
