Import Debian changes 3.5b2-46.2
canna (3.5b2-46.2) stable-security; urgency=high

  * Non-maintainer upload by the Security Team
  * Applied upstream patch to fix buffer overflows (CAN-2002-1158) and
    invalidate requests (CAN-2002-1159)
  * Used .2 since .1 was probably burnt and the buildd network has
    probably recorded the version string.

canna (3.5b2-46) unstable; urgency=low

  * fix bashism in debian/rules

canna (3.5b2-45) unstable; urgency=low

  * add Suggests: canna-shion, closes: #123014

canna (3.5b2-44) unstable; urgency=low

  * remove /etc/canna/default.canna from canna.deb,
    it is generated in postinst of libcanna1g.
    closes: #134469

canna (3.5b2-43) unstable; urgency=low

  * /etc/canna/default.canna marks as conffiles, closes: #132143

canna (3.5b2-42) unstable; urgency=low

  * add Depends: adduser (>= 3.34), closes: #116239 
  * debconf template spelling fix, closes: #116345

canna (3.5b2-41) unstable; urgency=low

  * some dictionary pronounce error fix,
    thanks Noboru Saitou <noborus@netlab.jp>
  * update german tenplate, closes: #113116

canna (3.5b2-40) unstable; urgency=low

  * add update-canna-dics_dir, closes: #109579

canna (3.5b2-39) unstable; urgency=low

  * canna and libcann1g purge handling fix
  * move /usr/share/canna/*.canna from canna package to libcanna1g package

canna (3.5b2-38) unstable; urgency=low

  * add german templates, closes: #109143

canna (3.5b2-37) unstable; urgency=low

  * adduser canna for cannaserver

canna (3.5b2-36) unstable; urgency=low

  * apply Hurd support patch, closes: #108599

canna (3.5b2-35) unstable; urgency=low

  * add debconf templates, config for selecting 
    default canna input style
  * add /usr/share/canna to roman-kana trans table serch path

canna (3.5b2-34) unstable; urgency=low

  * skip -33 because of using internal test release (my mistake)
  * update documents for using cannaserver with UNIX domain sokect.
  * add debconf note `default the UNIX domain sokect only'


--- a/debian/control
+++ b/debian/control
@@ -2,14 +2,15 @@ Source: canna
 Section: utils
 Priority: optional
 Maintainer: ISHIKAWA Mutsumi <ishikawa@linux.or.jp>
-Build-Depends: debhelper, findutils, xlib6g-dev
-Standards-Version: 3.0.0
+Build-Depends: debhelper (>= 2.1.0), findutils, xlibs-dev, xutils
+Standards-Version: 3.5.2
 
 Package: canna
 Architecture: any
-Depends: ${shlibs:Depends}
-Conflicts: canna-server
+Depends: ${shlibs:Depends}, debconf, adduser (>= 3.34)
+Conflicts: canna-server, libcanna1g (<= 3.5b2-33)
 Replaces: canna-server
+Suggests: canna-shion
 Description: A japanese input system (server and dictionary).
  Canna is a Japanese input system available in Free Software.
  Canna provides a unified user interface for inputing Japanese.
@@ -27,6 +28,7 @@ Description: A japanese input system (server and dictionary).
 Package: canna-utils
 Architecture: any
 Depends: ${shlibs:Depends}
+Conflicts: canna (<= 3.5b2-33), libcanna1g (<= 3.5b2-33)
 Description: A japanese input system (utility).
  Canna is a Japanese input system available in Free Software.
  This package includes canna client programs.
@@ -34,18 +36,17 @@ Description: A japanese input system (utility).
 Package: libcanna1g
 Section: libs
 Architecture: any
-Depends: ${shlibs:Depends}
-Conflicts: canna (<< 3.5b2-23)
+Depends: ${shlibs:Depends}, debconf
+Conflicts: canna (<= 3.5b2-33)
 Description: Canna Runtime Library (Libc6).
  Canna is a Japanese input system available in Free Software.
  This package includes canna shared libraries.
 
 Package: libcanna1g-dev
 Section: devel
-Priority: extra
 Architecture: any
 Depends: libcanna1g
-Conflicts: canna-dev, libcanna1-dev, canna (<< 3.5b2-23)
+Conflicts: canna-dev, libcanna1-dev, canna (<= 3.5b2-23)
 Replaces: canna-dev
 Description: Canna Static Library and Headers (Libc6).
  Canna is a Japanese input system available in Free Software.
