--- a/Canna.conf
+++ b/Canna.conf
@@ -130,11 +130,14 @@
 
 cannaBinDir = /usr/bin
 cannaSrvDir = /usr/sbin
-cannaLibDir = /var/lib/canna
+cannaLibDir = /etc/canna
+cannaEtcDir = /etc/canna
 /* cannaManDir = /usr/man/ja_JP.ujis */
 cannaManDir = /usr/man
 cannaIncDir = /usr/include/canna
 libCannaDir = /usr/lib
+cannaDocDir = /usr/share/doc/libcanna1g
+cannaShareDir = /usr/share/canna
 
 ErrDir  = /var/log/canna
 
@@ -205,7 +208,7 @@ dontHaveRename = 0
 /* #define UseInstalledLibCanna YES */
 #define UseInstalledLibCanna NO
 
-DicDir   = $(cannaLibDir)/dic
+DicDir   = /var/lib/canna/dic
 
 #ifdef NeXT
 #define NO_X_ENV
@@ -432,6 +435,7 @@ dst:: Canna.conf							@@\
 	echo "#define CANNAHOSTFILE '$(cannaLibDir)/cannahost'" >> junk	@@\
 	echo "/* for lib/canna */" >> junk				@@\
 	echo "#define CANNALIBDIR '$(cannaLibDir)'" >> junk		@@\
+	echo "#define CANNASHAREDIR '$(cannaShareDir)'" >> junk		@@\
 	echo "/* for scripts */" >> junk				@@\
 	echo "#define CANNABINDIR $(cannaBinDir)" >> junk		@@\
 	echo "/* others */" >> junk					@@\
@@ -455,6 +459,7 @@ dst:: Canna.conf							@@\
 	 echo "#define CANNAHOSTFILE \"$(cannaLibDir)/cannahost\"";\	@@\
 	 echo "/* for lib/canna */";\					@@\
 	 echo "#define CANNALIBDIR \"$(cannaLibDir)\""; \		@@\
+	 echo "#define CANNASHAREDIR \"$(cannaShareDir)\""; \		@@\
 	 echo "/* for scripts */";\					@@\
 	 echo "#define CANNABINDIR $(cannaBinDir)"; \			@@\
 	 echo "/* others */";\					@@\
