Import Debian changes 3.5b2-25.2
canna (3.5b2-25.2) oldstable-security; urgency=high

  * Non-maintainer upload by the Security Team
  * Applied upstream patch to fix buffer overflows (CAN-2002-1158) and
    invalidate requests (CAN-2002-1159)
  * Used .2 since .1 was probably burnt and the buildd network has
    probably recorded the version string.
  * Added build dependencies

--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: canna
 Section: utils
 Priority: optional
 Maintainer: ISHIKAWA Mutsumi <ishikawa@linux.or.jp>
+Build-Depends: debhelper, findutils, xlib6g-dev
 Standards-Version: 3.0.0
 
 Package: canna
